--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT="4017"
 MONGODB_URL = "mongodb+srv://dbadmin:zTj2cd7yssyKgTWy@cluster0.ocwvs.mongodb.net/db-graphql?retryWrites=true&w=majority"
-JSONWEBTOKEN_PRIVATE_KEY="123123asdasjjjhh"
+JSONWEBTOKEN_PRIVATE_KEY="9894r98sbd4dsfvstndtn85485"
 
