--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT="4017"
 MONGODB_URL = "mongodb://dbadmin:zTj2cd7yssyKgTWy@cluster0-shard-00-00.ocwvs.mongodb.net:27017,cluster0-shard-00-01.ocwvs.mongodb.net:27017,cluster0-shard-00-02.ocwvs.mongodb.net:27017/db-graphql?ssl=true&replicaSet=atlas-12pmt5-shard-0&authSource=admin&retryWrites=true&w=majority"
-JSONWEBTOKEN_PRIVATE_KEY="9894r98sbd4dsfvstndtn85485"
+JSONWEBTOKEN_PRIVATE_KEY="123123asdasjjjhh"
 
